fix(project/slider): fix slides position on mobile

--- a/src/components/components/presentation-slider/presentation-slider.component.scss
+++ b/src/components/components/presentation-slider/presentation-slider.component.scss
@@ -9,6 +9,7 @@
     height: 100%;
     max-width: 100%;
     overflow: hidden;
+    margin: 4px 0;
     display: flex;
     flex-direction: column;
     gap: 16px;
