--- a/src/pages/projects/project.media.scss
+++ b/src/pages/projects/project.media.scss
@@ -13,7 +13,6 @@
 
     &__slider-container {
       position: relative;
-      padding-bottom: 16px;
 
       .project__container {
         padding: 32px calc(var(--panel-margin-right) + 16px) 32px calc(var(--panel-margin-left) + 16px);
