--- a/src/pages/projects/project.scss
+++ b/src/pages/projects/project.scss
@@ -79,7 +79,6 @@
 
   &__slider-container {
     position: relative;
-    padding-bottom: 16px;
     background-color: #6597D8AA;
 
     .helltv__group {
